# object_tracking

./: README.md
dlib/: CMakeLists.txt  main.cpp
fast_klt/: CMakeLists.txt  FastKltTracker.cpp  FastKltTracker.hpp  main.cpp  params.yaml
kcf/: CMakeLists.txt  main.cpp
kcf/KCFcpp/src/: kcftracker.cpp  kcftracker.hpp  tracker.h
